--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div>
         <h1 class="name">海綿寶寶</h1>
         <hr class="line1">
-        <img class="headshot">
+        <img class="headshot" src="../css_ska/img/photo.png">
         <div>
             <p class="personal">個人資料</p>
             <p class="profile">PROFILE</p>
@@ -56,7 +56,7 @@
     <hr class="line5">
     <hr class="line6">
     <p class="work-p1">蟹堡王 首席大廚 | 2018/07 - 2022/10</p>
-    <img class="hamburger">
+    <img class="hamburger" src="../css_ska/img/burger.png">
     <p class="work-p2">身為蟹堡王的首席大廚，每天製作 1 萬顆美味蟹堡是基本的工作內容；其次得過許多次最佳員工，對於長工時以及高壓、高溫、低薪的環境都能得心應手。
         在旺季以及同事罷工的時期，除了擔任廚師一職，也能協助收銀、送餐等分外的工作。必要時，可以使用海綿的特性，一分為二來提升工作效率。再者，曾多次守護美味蟹堡的獨家配方，不讓競業得逞。
     </p>
@@ -72,8 +72,8 @@
     <p  class="contact-p1">電子郵件：spongebob123@bichibao.com</p>
     <p  class="contact-p2">手機號碼：0911-222-333</p>
     <p  class="contact-p3">居所：比奇堡大鳳梨</p>
-    <img class="linkedin">
-    <img class="youtube">
-    <img class="line">
+    <img class="linkedin" src="../css_ska/img/linkedin.png">
+    <img class="youtube" src="../css_ska/img/youtube.png">
+    <img class="line" src="../css_ska/img/line.png">
 </body>
 </html>
